<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/con_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.EliteOutsourcing"
    tools:context=".RegistrationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_Reg"
        app:title="@string/reg_act"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/dark_orange"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
        app:titleTextColor="@color/white"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tb_Reg"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_profile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/dark_orange"
                android:contentDescription="@string/todo"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                tools:ignore="MissingConstraints"
                tools:src="@drawable/ic_launcher_background"
                 />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:textSize="18sp"
                android:textColor="@color/lightgrey"
                android:background="@drawable/button_darkorange" />

            <EditText
                android:id="@+id/etSurName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/surname_name"
                android:inputType="textPersonName"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:textSize="18sp"
                android:textColor="@color/lightgrey"
                android:background="@drawable/button_darkorange" />

            <EditText
                android:id="@+id/etEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:textSize="18sp"
                android:textColor="@color/lightgrey"
                android:background="@drawable/button_darkorange"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_darkorange"
                android:ems="15"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/lightgrey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:padding="10dp"
                android:textSize="18sp"
                android:textColor="@color/lightgrey"
                android:background="@drawable/button_darkorange" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="or"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp" />

            <TextView
                android:id="@+id/tvRegLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login with account"
                android:textColor="@color/dark_orange"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>