<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.ProfileFragment"
    >

    <TextView
        android:id="@+id/tvProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Profile"
        android:textColor="@color/dark_orange"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@color/fui_transparent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvProfile"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/button_darkorange"
                android:id="@+id/top_bar"
                android:padding="30dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@color/dark_orange"
                        tools:src="@drawable/ic_launcher_background"
                        android:id="@+id/image_profile"/>

                    <TextView
                        android:id="@+id/tvEditPhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Edit Photo"
                        android:textColor="@color/dark_orange"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="4dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical">

                        <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvusername"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:text="Sur + Firname"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvUserTitle"
                            android:textColor="@color/black"
                            android:gravity="center"
                            android:text="title"
                            android:textSize="12sp"
                            android:layout_marginBottom="10dp"
                            />

                        <Button
                            android:id="@+id/btnLogout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Log out"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            />



                </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Personal Information"
                            android:textColor="@color/dark_orange"
                            android:textAlignment="textStart"
                            android:textStyle="normal"
                            android:layout_weight="1"
                            android:background="@color/fui_transparent"
                            />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_darkorange">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvFirstname"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:text="First Name:"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    />
                <EditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="15"
                    android:hint="@string/first_name"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/lightgrey"
                    android:background="@color/fui_transparent"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvSurName"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:text="SurName:"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    />
                <EditText
                    android:id="@+id/etSurName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="15"
                    android:hint="@string/surname_name"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/lightgrey"
                    android:background="@color/fui_transparent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvEmailAddress"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:text="Email Address:"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    />
                <EditText
                    android:id="@+id/etEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="15"
                    android:hint="@string/email_address"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/lightgrey"
                    android:background="@color/fui_transparent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvNationality"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:text="Nationality:"
                    android:textSize="16sp"
                    android:layout_marginBottom="2dp"
                    />
                <EditText
                    android:id="@+id/etNationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="15"
                    android:hint="Nationality"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:background="@color/fui_transparent"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPhoneNumber"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:text="PhoneNumber:"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    />
                <EditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="15"
                    android:hint="PhoneNumber"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:background="@color/fui_transparent" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btnEdit_Save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_weight="1"
                        android:text="Save"
                        tools:ignore="MissingConstraints" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Academic Qualifications "
                    android:textColor="@color/dark_orange"
                    android:textAlignment="textStart"
                    android:textStyle="normal"
                    android:layout_weight="1"
                    android:background="@color/fui_transparent"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_darkorange">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <Button
                        android:id="@+id/btnEdit_SaveAQ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="20dp"
                        android:text="Save"
                        tools:ignore="MissingConstraints" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Employment History"
                    android:textColor="@color/dark_orange"
                    android:textAlignment="textStart"
                    android:textStyle="normal"
                    android:layout_weight="1"
                    android:background="@color/fui_transparent"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_darkorange">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btnEdit_SaveEH"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="20dp"
                        android:text="Save"
                        tools:ignore="MissingConstraints" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Attachments"
                    android:textColor="@color/dark_orange"
                    android:textAlignment="textStart"
                    android:textStyle="normal"
                    android:layout_weight="1"
                    android:background="@color/fui_transparent"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_darkorange">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btnEdit_SaveAttach"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="20dp"
                        android:text="Save"
                        tools:ignore="MissingConstraints" />


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
